Revision history for Dist-Zilla-PluginBundle-Author-OALDERS

{{$NEXT}}
    - Fix encoding of stopwords.
    - Use MAXMIND's TidyAll plugin.

0.000004  2016-07-25 22:46:45-04:00 America/Toronto
    - remove usage of [ModuleBuild].

0.000003  2016-07-22 18:44:36-04:00 America/Toronto
    - Copy Makefile.PL from build.

0.000002  2016-07-22 10:50:13-04:00 America/Toronto
    - Adds support for .stopwords files.

0.000001  2016-07-11 11:17:26-04:00 America/Toronto
    - Initial release.