@@ -1,13 +1,0 @@
-[PerlTidy]
-select = {bin,examples,lib,t}/**/*.{pl,pm,t,psgi}
-select = app.psgi
-
-; [PerlCritic]
-; select = {bin,lib,t}/**/*.{pl,pm,t,psgi}
-; argv = --severity 5 --verbose 11 --exclude=ValuesAndExpressions::ProhibitAccessOfPrivateData
-
-[SortLines::Naturally]
-select = .gitignore
-
-[JSON]
-select = t/**/*json
