@@ -6,7 +6,7 @@ Dist::Zilla::PluginBundle::Author::OALDERS - A plugin bundle for distributions b
 
 # VERSION
 
-version 0.000004
+version 0.000005
 
 ## configure
 
