@@ -5,9 +5,8 @@ requires "Moose" => "0";
 requires "Types::Path::Tiny" => "0";
 requires "Types::Standard" => "0";
 requires "feature" => "0";
+requires "namespace::autoclean" => "0";
 requires "perl" => "5.010";
-requires "strict" => "0";
-requires "warnings" => "0";
 
 on 'test' => sub {
   requires "File::Spec" => "0";
@@ -16,6 +15,8 @@ on 'test' => sub {
   requires "Test::More" => "0";
   requires "blib" => "1.01";
   requires "perl" => "5.010";
+  requires "strict" => "0";
+  requires "warnings" => "0";
 };
 
 on 'configure' => sub {
@@ -26,6 +27,8 @@ on 'configure' => sub {
 on 'develop' => sub {
   requires "Pod::Coverage::TrustPod" => "0";
   requires "Test::CPAN::Changes" => "0.19";
+  requires "Test::Code::TidyAll" => "0.24";
+  requires "Test::More" => "0.88";
   requires "Test::Pod::Coverage" => "1.08";
   requires "Test::Spelling" => "0.12";
   requires "Test::Synopsis" => "0";
