@@ -1,0 +1,25 @@
+[PerlTidy]
+select = **/*.{pl,pm,t,psgi}
+ignore = t/00-*
+ignore = t/author-*
+ignore = t/release-*
+ignore = blib/**/*
+ignore = .build/**/*
+ignore = Dist-Zilla-PluginBundle-Author-OALDERS-*/**/*
+argv = --profile=$ROOT/perltidyrc
+
+;[PerlCritic]
+;select = **/*.{pl,pm,t,psgi}
+;ignore = t/00-*
+;ignore = t/author-*
+;ignore = t/release-*
+;ignore = blib/**/*
+;ignore = .build/**/*
+;ignore = Dist-Zilla-PluginBundle-Author-OALDERS-*/**/*
+;argv = --profile $ROOT/perlcriticrc --program-extensions .pl  --program-extensions .t --program-extensions .psgi
+
+[SortLines::Naturally]
+select = .gitignore
+
+[JSON]
+select = t/**/*json
